# ltheory-test

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  bootstrap.sh  run.sh
libphx/: CMakeLists.txt
libphx/ext/lib/linux64/: libfmodstudio.so.10  libfmodstudioL.so.10
libphx/include/: RigidBody.h
libphx/script/ffi/: RigidBody.lua  libphx.lua
libphx/src/: Draw.cpp  Engine.cpp  Physics.cpp  RigidBody.cpp  Tex2D.cpp  Tex2D_Load.cpp  TexCube.cpp
res/shader/fragment/: ptracer.glsl  ptracer_out.glsl  skybox.glsl  skybox_dynamic.glsl  skybox_spheremap.glsl  starbg.glsl  terrain.glsl
res/shader/fragment/compute/: irmap.glsl  occlusion.glsl  occlusion_sdf.glsl
res/shader/fragment/effect/: dustcloud.glsl
res/shader/fragment/filter/: add.glsl  blur.glsl  blurhdr.glsl  madd.glsl  overlay.glsl  radialminmax.glsl  vignette.glsl
res/shader/fragment/light/: composite.glsl  global.glsl  point.glsl
res/shader/fragment/material/: asteroid.glsl  devmatenv.glsl  metal.glsl  triplanar.glsl
res/shader/include/: deferred.glsl  fragment.glsl
res/shader/vertex/: identity.glsl  ui.glsl  worldray.glsl
script/: Config.App.lua
script/App/: LTheory.lua  MyTest.lua  RenderTest.lua
script/Game/: ShipType.lua  SocketKind.lua  SocketObj.lua
script/Game/Actions/: Attack.lua
script/Game/Components/: Health.lua  RigidBody.lua  Sockets.lua  ThrustController.lua
script/Game/Controls/: HUD.lua
script/Game/Entities/: Asteroid.lua  System.lua  Thruster.lua  Turret.lua
script/env/ext/: IOEx.lua
script/jit/: dump2.lua
script/phx/: phx.lua
script/phx/util/: CReference.lua
(+1 files in other folders)
